<?xml version="1.0" encoding="utf-8"?>
<!--nav_graph.xml-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homepageFragment">
    <fragment
        android:id="@+id/homepageFragment"
        android:name="com.example.baksomanagement.ui.homepage.HomepageFragment"
        android:label="Homepage">
        <action
            android:id="@+id/action_homepageFragment_to_detailMenuFragment"
            app:destination="@id/menu_detail_makanan" />
        <action
            android:id="@+id/action_homepageFragment_to_statusOrderanFragment"
            app:destination="@id/statusOrderanFragment" />
    </fragment>

    <fragment
        android:id="@+id/menu_search"
        android:name="com.example.baksomanagement.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/menu_setting"
        android:name="com.example.baksomanagement.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting"/>

    <fragment
        android:id="@+id/menu_about_us"
        android:name="com.example.baksomanagement.ui.aboutUs.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us"/>

    <fragment
        android:id="@+id/menu_account"
        android:name="com.example.baksomanagement.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account"/>

    <fragment
        android:id="@+id/menu_makanan"
        android:name="com.example.baksomanagement.ui.menu.MenuFragment"
        android:label="@string/menu_makanan"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_menuFragment_to_detailMenuFragment"
            app:destination="@id/menu_detail_makanan"/>
        <action
            android:id="@+id/action_menuFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment"/>
    </fragment>


    <fragment
        android:id="@+id/menu_detail_makanan"
        android:name="com.example.baksomanagement.ui.menu.DetailMenuFragment"
        android:label="@string/menu_detail_makanan"
        tools:layout="@layout/fragment_detail_menu"/>

    <fragment
        android:id="@+id/menu_history"
        android:name="com.example.baksomanagement.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_historyFragment_to_menuFragment"
            app:destination="@id/menu_detail_makanan"/>
    </fragment>

    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.example.baksomanagement.ui.checkout.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/fragment_checkout">
        <action
            android:id="@+id/action_checkoutFragment_to_homepageFragment"
            app:destination="@id/homepageFragment"/>
        <action
            android:id="@+id/action_checkoutFragment_to_detailMenuFragment"
            app:destination="@id/menu_detail_makanan"/>

    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.baksomanagement.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cartFragment_to_menuFragment"
            app:destination="@id/menu_makanan"/>
    </fragment>

    <fragment
        android:id="@+id/menu_favourite"
        android:name="com.example.baksomanagement.ui.favourite.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite"/>

    <fragment
        android:id="@+id/statusOrderanFragment"
        android:name="com.example.baksomanagement.ui.orderStatus.StatusOrderanFragment"
        android:label="@string/statusOrderanFragment"
        tools:layout="@layout/fragment_status_orderan"/>
</navigation>